--- a/sports.html
+++ b/sports.html
@@ -50,32 +50,32 @@
                 </div>
                 <div class="menu-content">
                     <ul>
-                        <li id="menu-active">
+                        <li>
                             <a href="index.html">首頁</a>
                         </li>
                         <li data-droplist="lottery-menu">
                             <a href="lottery.html">彩票投注 <i class="fas fa-angle-down droplist-arrow"></i></a>
                         </li>
-                        <li data-droplist="sports-menu">
+                        <li id="menu-active" data-droplist="sports-menu">
                             <a href="sports.html">體育投注 <i class="fas fa-angle-down droplist-arrow"></i></a>
                         </li>
                         <li data-droplist="slot-menu">
-                            <a href="">電子遊戲 <i class="fas fa-angle-down droplist-arrow"></i></a>
+                            <a href="slot.html">電子遊戲 <i class="fas fa-angle-down droplist-arrow"></i></a>
                         </li>
                         <li data-droplist="live-menu">
-                            <a href="live-entertainment.html">真人視訊 <i class="fas fa-angle-down droplist-arrow"></i></a>
+                            <a href="live.html">真人視訊 <i class="fas fa-angle-down droplist-arrow"></i></a>
                         </li>
                         <li data-droplist="fishing-menu">
                             <a href="fishing.html">捕魚對戰 <i class="fas fa-angle-down droplist-arrow"></i></a>
                         </li>
                         <li>
-                            <a href="">優惠活動</a>
+                            <a href="promotions.html">優惠活動</a>
                         </li>
                         <li>
-                            <a href="">任務專區</a>
+                            <a href="task.html">任務專區</a>
                         </li>
                         <li>
-                            <a href="">VIP俱樂部</a>
+                            <a href="vipclub.html">VIP俱樂部</a>
                         </li>
                     </ul>
                 </div>
