--- a/index.html
+++ b/index.html
@@ -145,22 +145,22 @@
                             <a href="sports.html">體育投注 <i class="fas fa-angle-down droplist-arrow"></i></a>
                         </li>
                         <li data-droplist="slot-menu">
-                            <a href="">電子遊戲 <i class="fas fa-angle-down droplist-arrow"></i></a>
+                            <a href="slot.html">電子遊戲 <i class="fas fa-angle-down droplist-arrow"></i></a>
                         </li>
                         <li data-droplist="live-menu">
-                            <a href="live-entertainment.html">真人視訊 <i class="fas fa-angle-down droplist-arrow"></i></a>
+                            <a href="live.html">真人視訊 <i class="fas fa-angle-down droplist-arrow"></i></a>
                         </li>
                         <li data-droplist="fishing-menu">
                             <a href="fishing.html">捕魚對戰 <i class="fas fa-angle-down droplist-arrow"></i></a>
                         </li>
                         <li>
-                            <a href="">優惠活動</a>
+                            <a href="promotions.html">優惠活動</a>
                         </li>
                         <li>
-                            <a href="">任務專區</a>
+                            <a href="task.html">任務專區</a>
                         </li>
                         <li>
-                            <a href="">VIP俱樂部</a>
+                            <a href="vipclub.html">VIP俱樂部</a>
                         </li>
                     </ul>
                 </div>
@@ -279,7 +279,6 @@
             </div>
         </div>
         <div class="mb-menu-list-bg">
-
         </div>
         <div class="mb-menu-list">
             <ul class="mb-list-content">
@@ -389,7 +388,7 @@
                             <div class="gamebox-img">
                             </div>
                             <div class="gamebox-text">
-                                <p>電子遊戲V</p>
+                                <p>電子遊戲C</p>
                             </div>
                         </div>
                         <div class="mb-gamebox-ch">
